# f1fs

./: .gitignore  Cargo.toml  sample_race.json
.github/workflows/: rust.yml
spec/: file_listing-1979.txt  file_listing-2021.txt  file_listing.txt
spec/fixtures/: race_season_raw.json  sample_race_season.json
src/: ergast_client.rs  generate.rs  main.rs  models.rs  relocate.rs  subcommands.rs  utils.rs  watch.rs
src/subcommands/: generate.rs  metadata.rs  relocate.rs  watch.rs
src/utils/: ergast_client.rs
