[package]
name = "f1fs"
description = "A multi step tool to handle ideal filesystem structures for Formula 1 on Plex."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.5", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
getopts = "0.2.21"
number_range = "0.2.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
simple-error = "0.3.0"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.38"
tracing-subscriber = "0.3.17"
