[package]
name = "f1fs"
description = "A multi step tool to handle ideal filesystem structures for Formula 1 on Plex."
version = "0.1.1"
edition = "2021"
repository = "https://github.com/imajes/f1fs"
license = "MIT"
keywords = ["media", "files", "filesystem", "plex", "formula1"]
categories = ["command-line-utilities", "filesystem", "multimedia::video"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.1"
getopts = "0.2.21"
number_range = "0.2.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
